--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-top: 0;
+	margin-bottom: 0;
 }
 h1{
 	@include font-size(32);
@@ -33,19 +34,51 @@ strong,th {
 a,a:active,a:visited{
 	color: inherit;
 }
-p{
-	margin-top: 0;
-	margin-bottom: 6px;
-	@include font-size($font-size);
-	font-weight: 300;
-}
-ul,
-ol{
-	@include font-size(16);
-}
 li ul,
 li ol{
 	margin-left: 20px;
+}
+
+//rythme vertical
+//leading grand écran: 25.2
+p, 
+ul, 
+ol{
+	@include font-size($font-size);
+	font-weight: 300;
+	line-height: 1.4em;
+	margin-top: 0;
+	margin-bottom: 1.4em;
+}
+h1{
+	margin-bottom: 30px;
+}
+h1{
+	margin-bottom: 25px;
+}
+hr{
+	border: none;
+	padding-bottom: 20px;
+	margin: 25px 0;
+	
+	&:before{
+		content: "* * * * *";
+		display: block;
+		text-align: center;
+		font-family: $heading-font-family;
+		@include font-size(50);
+		color: #fff;
+	}
+}
+div.content{
+	@include column-count(2);
+	@include column-gap(40px);
+	@include column-break-inside(avoid);
+	text-align: justify;
+	
+	@include breakpoint(mobile){
+		@include column-count(1);
+	}
 }
 
 //menu
@@ -104,10 +137,13 @@ li ol{
 #menu a{
 	display: block;
 	text-decoration: none;
+	font-weight: 700;
+	@include font-size(16);
 	padding: 10px 0;
 	@include transition();
 
-	&:hover{
+	&:hover,
+	&:focus{
 		background: #f4f4f4;
 		color: #252525;
 	}
@@ -145,6 +181,9 @@ li ol{
 		border-right-width: 0;
 		border-left-width: $fold-width;
 	}
+}
+div.ribbon-wrapper{
+	text-align: center;
 }
 
 //slides
@@ -230,7 +269,8 @@ section.slide div.slide-inner{
 		@include ribbon($couleur-texte-corporate);
 		@include transition();
 		
-		&:hover{
+		&:hover,
+		&:focus{
 			background: lighten($couleur-texte-corporate, 4);
 		}
 	}
@@ -238,19 +278,12 @@ section.slide div.slide-inner{
 #pourquoi{
 	background: $couleur-fond-contraste;
 
-	h1{
-		margin-bottom: 40px;
-	}
 	h1 span{
 		font-weight: 400;
 
 		@include breakpoint(mobile){
 			display: block;
 		}
-	}
-	strong{
-		margin-bottom: 15px;
-		display: block;
 	}
 }
 #entrepreneur{
@@ -276,13 +309,18 @@ section.slide div.slide-inner{
 	}
 	
 	blockquote{
+		display: inline-block;
 		@include ribbon(#f4f4f4);
 		@include font-size(22);
-		width: 75%;
 		margin: auto;
+		padding: 5px 100px;
 		font-weight: 700;
 		color: $couleur-fond-contraste;
 		text-align: center;
+		
+		@include breakpoint(mobile){
+			padding: 5px 7%;
+		}
 	}
 	cite{
 		display: block;
@@ -290,7 +328,6 @@ section.slide div.slide-inner{
 		font-style: normal;
 		@include font-size(20);
 		text-align: right;
-		padding-right: 50px;
 	}
 	
 	ul.prop-links{
@@ -305,15 +342,25 @@ section.slide div.slide-inner{
 		margin-right: 15px;
 		margin-left: 15px;
 		margin-bottom: 30px;
-		background: #8e2011;
+		line-height: 1;
 		
-		&:hover{
-			background: lighten(#8e2011, 3);
+		@include breakpoint(mobile){
+			display: block;
+			width: 100%;
+			margin-right: 0;
+			margin-left: 0;
 		}
 	}
 	ul.prop-links div.wrap{
 		display: table;
+		width: 100%;
 		position: relative;
+		background: #8e2011;
+		@include transition();
+		
+		&:hover{
+			background: darken(#8e2011, 5);
+		}
 		
 		&:after{
 			content: attr(data-num);
@@ -325,6 +372,10 @@ section.slide div.slide-inner{
 			font-family: $heading-font-family;
 			font-weight: 700;
 			z-index: 1;
+			@include transition();
+		}
+		&:hover:after{
+			right: 5px;
 		}
 	}
 	ul.prop-links a{
@@ -339,7 +390,13 @@ section.slide div.slide-inner{
 		font-family: $heading-font-family;
 		@include font-size(22);
 		font-weight: 700;
+		line-height: 1.3em;
 		z-index: 10;
+		
+		@include breakpoint(tablet){
+			@include font-size(20);
+			line-height: 1.2em;
+		}
 	}
 	
 	
@@ -349,16 +406,20 @@ section.slide div.slide-inner{
 		font-family: $heading-font-family;
 		font-weight: 700;
 		color: #e0867a;
+		z--index: -1;
 	
 		@include breakpoint(desktop){
 			@include font-size(600);
 			bottom: -150px;
 			right: -20px;
 		}
-		@include breakpoint(mobile){
-			@include font-size(450);
-			bottom: -120px;
+		@include breakpoint(tablet){
+			@include font-size(400);
+			bottom: -150px;
 			right: -20px;
+		}
+		@include breakpoint(mobile){
+			display: none;
 		}
 	}
 }
